--- a/views/account_move_dynamic.xml
+++ b/views/account_move_dynamic.xml
@@ -12,7 +12,8 @@
                             <group>
                                 <field name="name"/>
                                 <field name="date"/>
-                                <field name="type"/>
+                                <field name="invoice_type"/>
+                                <field name="payment_type"/>
                                 <field name="amount"/>
                                 <field name="journal_id"/>
                                 <field name="invoice_user_id"/>
@@ -30,7 +31,8 @@
                 <tree string="Account Move Dynamic">
                     <field name="name"/>
                     <field name="date"/>
-                    <field name="type"/>
+                    <field name="invoice_type"/>
+                    <field name="payment_type"/>
                     <field name="amount"/>
                     <field name="journal_id"/>
                     <field name="invoice_user_id"/>
@@ -45,7 +47,6 @@
                     <field name="name"/>
                     <group expand="0" string="Group By">
                         <filter string="Name" name="name" context="{'group_by':'name'}"/>
-                        <filter string="Type" name="type" context="{'group_by':'type'}"/>
                     </group>
                 </search>
             </field>
