--- a/report/sale_report_views.xml
+++ b/report/sale_report_views.xml
@@ -94,7 +94,7 @@
                                                 <span t-field="o.type"/>
                                             </td>
                                             <td>
-                                                <span t-esc="o.invoice_user_id.name"/>
+                                                <span t-esc="o.user_id.name"/>
                                             </td>
                                             <td>
                                                 <span t-esc="o.journal_id.name"/>
