--- a/views/account_move_dynamic.xml
+++ b/views/account_move_dynamic.xml
@@ -16,7 +16,7 @@
                                 <field name="payment_type"/>
                                 <field name="amount"/>
                                 <field name="journal_id"/>
-                                <field name="invoice_user_id"/>
+                                <field name="user_id"/>
                             </group>
                         </group>
                     </sheet>
@@ -35,7 +35,7 @@
                     <field name="payment_type"/>
                     <field name="amount"/>
                     <field name="journal_id"/>
-                    <field name="invoice_user_id"/>
+                    <field name="user_id"/>
                 </tree>
             </field>
         </record>
